# llm-sensitivity

./: .gitattributes  .gitignore  README.md  env.yaml  env_311.yaml  env_39.yaml  log-saurabh.md  pyproject.toml
data/: answers_llama31.csv
data/DiffModelAnsGenerateForCatQA/: answers_llama2.csv  answers_llama3.csv  answers_llama31.csv  answers_mistral.csv
docs/: mamba-setup.md  sol-setup.md
documentation/: mamba-setup.md  repo-setup.md  sol-setup.md
notebooks/: EDA-CategoricalHarmfulQA.ipynb  EDA-gh-typo.ipynb  EDA-squad.ipynb  Generate_Multiple_Augmentation_Data.ipynb  gcd-exploration.ipynb  perturbations.ipynb
resources/: job_script(1).sh  llama3_8b-contrast-set(1).py
sbatch_log/: slurm.19170198.err  slurm.19170198.out  slurm.19187983.out  slurm.19260354.err  slurm.19287646.err  slurm.19287646.out  slurm.19833922.err
src/: __init__.py
src/config/: envs.py  models.py
src/experiments/: 10_gnrt_ans_for_char_lvl_llama3_part1.sh  11_gnrt_ans_for_char_lvl_llama3_part2.sh  12_gnrt_ans_for_char_lvl_llama2_part1.sh  13_gnrt_ans_for_char_lvl_llama2_part2.sh  14_gnrt_ans_for_wrd_lvl_llama31_part1.sh  15_gnrt_ans_for_wrd_lvl_llama31_part2.sh  16_gnrt_ans_for_wrd_lvl_llama3_part1.sh  17_gnrt_ans_for_wrd_lvl_llama3_part2.sh  18_gnrt_ans_for_wrd_lvl_llama2_part1.sh  19_gnrt_ans_for_wrd_lvl_llama2_part2.sh  1_gnrt_ans_for_org_ques.sh  20_safety.sh  21_prtrb_sntnc_lvl.sh  22_gnrt_ans_for_sntnc_lvl_llama31.sh  23_gnrt_ans_for_sntnc_lvl_mistral.sh  24_gnrt_ans_for_sntnc_lvl_llama3.sh  25_gnrt_ans_for_sntnc_lvl_llama2.sh  (+46 more)
supports/: Thesis Proposal - Saurabh Zinjad.docx
(+458 files in other folders)
