[tool.poetry]
name = "llm-sensitivity"
version = "0.1.0"
description = ""
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
spacy = "^3.7.4"
scikit-learn = "^1.4.1.post1"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
